sugar-web-activity (101-1) unstable; urgency=low

  * New upstream release.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 04 Dec 2008 04:40:32 +0100

sugar-web-activity (100-1) unstable; urgency=low

  * New upstream release.
  * Depend on ${misc:Depends}.
  * Update copyright hints (no new owners or licenses).
  * Update danish (da) locale.
  * Fix cdbs snippet python-sugar.mk to install activities below
    /usr/share/sugar (not /usr/share).
  * Several minor improvements to local cdbs snippet upstream-
    tarball.mk.
  * Update CDBS snippet copyright-check.mk: Compact simple licenses
    (those without ' or later').
  * Update upstream source URL in debian/copyright and watch file.
  * Fix Homepage in long description.
  * Fix cdbs snippet python-sugar.mk to use --prefix option. Tighten
    build-dependency to python-sugar-toolkit since that change.
  * Semi-auto-update debian/control to tighten build-dependencies.
  * Clean auto-generated MANifEST file.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 13 Nov 2008 16:41:21 +0100

sugar-web-activity (95-1) unstable; urgency=low

  * New upstream release.
  * Upstream package changed name to Browse (from Web).  Update watch
    file and cdbs hint for get-orig-source target.
  * Update cdbs snippets:
    + Move dependency cleanup to new local snippet package-relations.mk.
    + Update copyright-check output to more closely match proposed new
      copyright file format.  Update copyright-hints.
    + Update README.cdbs-tweaks.
  * Add DEB_MAINTAINER_MODE in debian/rules (thanks to Romain Beauxis).

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 16 Aug 2008 16:36:09 +0200

sugar-web-activity (91-1) unstable; urgency=low

  * New upstream release.
  * Update local cdbs snippets:
    + Relax copyright-check to only warn about its discoveries.  Closes:
      bug#486975.
  * Update debian/copyright (new files, same owners and licenses).
    Update debian/copyright-hints.
